# axiom

./: .gitignore  Makefile  README.md  RELEASE.md  pyproject.toml
.github/workflows/: release.yml  test.yml
adapters/: README.md
docs/: ADAPTER_PROTOCOL.md  DEMO_WALKTHROUGH.md  DEPLOYMENT.md  LOCAL_MODEL_ADAPTERS.md  POLICY.md
docs/superpowers/plans/: 2026-04-22-axiom-bootstrap.md  2026-04-23-release-transparency.md  2026-04-24-agent-loop-hardening.md  2026-04-24-contract-e2e-hardening.md  2026-04-24-runtime-hardening.md  2026-04-24-safety-lifecycle-hardening.md  2026-04-25-install-evidence-hardening.md
examples/adapters/: file_write_execute_adapter.py  openai_compatible_plan_adapter.py  openai_compatible_review_adapter.py  static_plan_adapter.py
examples/sample-tasks/: README.md
schemas/: adapter-request.schema.json  plan.schema.json  review.schema.json  task-frontmatter.schema.json  verify.schema.json
scripts/: __init__.py  installed_wheel_smoke.py  release_manifest.py  sbom.py  sync_schemas.py  write_build_metadata.py
src/axiom/: __init__.py  _build.py  adapters.py  approvals.py  artifacts.py  cli.py  config.py  doctor.py  git.py  models.py  phases.py  policy.py  policy_config.py  schema.py  state_machine.py  task_file.py  templates.py  tool_broker.py  version.py
tests/unit/: test_adapters.py  test_artifacts.py  test_cli_bootstrap.py  test_cli_commands.py  test_git_runtime.py  test_packaging.py  test_phases.py  test_policy_schema.py  test_release_scripts.py  test_state_machine.py  test_task_file.py  test_version.py
(+6 files in other folders)
