[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-workflow"
dynamic = ["version"]
description = "Deterministic local-first workflow layer for coding agents"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/agent-axiom/axiom"
Repository = "https://github.com/agent-axiom/axiom"

[project.scripts]
axiom = "axiom.cli:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
axiom = ["schemas/*.json"]

[tool.setuptools.dynamic]
version = {attr = "axiom.__version__"}
